--- a/Nodes/DesaturateFilterNode.ui
+++ b/Nodes/DesaturateFilterNode.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>166</width>
-    <height>61</height>
+    <height>63</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -46,7 +46,13 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>28</height>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>24</height>
       </size>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
