--- a/Nodes/ImageOutputNode.ui
+++ b/Nodes/ImageOutputNode.ui
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ImageInputNode</class>
- <widget class="QWidget" name="ImageInputNode">
+ <class>ImageOutputNode</class>
+ <widget class="QWidget" name="ImageOutputNode">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>152</width>
-    <height>137</height>
+    <width>153</width>
+    <height>96</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -19,9 +19,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
-    <number>2</number>
+    <number>0</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
@@ -33,7 +33,7 @@
     <number>0</number>
    </property>
    <property name="bottomMargin">
-    <number>2</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QWidget" name="NodeUiBase" native="true">
@@ -97,8 +97,17 @@
        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,1">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
+          </property>
+          <property name="leftMargin">
+           <number>2</number>
+          </property>
+          <property name="rightMargin">
+           <number>2</number>
           </property>
           <item>
            <widget class="QLineEdit" name="label">
@@ -111,28 +120,31 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pb_reload">
+           <widget class="QPushButton" name="pb_save">
             <property name="minimumSize">
              <size>
-              <width>24</width>
-              <height>24</height>
+              <width>28</width>
+              <height>28</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>50</width>
-              <height>16777215</height>
+              <width>28</width>
+              <height>28</height>
              </size>
-            </property>
-            <property name="toolTip">
-             <string comment="Reload input"/>
             </property>
             <property name="text">
              <string/>
             </property>
             <property name="icon">
              <iconset resource="../icons.qrc">
-              <normaloff>:/icons/Icons/icons8-update-50.png</normaloff>:/icons/Icons/icons8-update-50.png</iconset>
+              <normaloff>:/icons/Icons/icons8-save-50.png</normaloff>:/icons/Icons/icons8-save-50.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>18</width>
+              <height>18</height>
+             </size>
             </property>
             <property name="flat">
              <bool>true</bool>
@@ -149,14 +161,14 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>24</width>
-              <height>24</height>
+              <width>28</width>
+              <height>28</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>50</width>
-              <height>16777215</height>
+              <width>28</width>
+              <height>28</height>
              </size>
             </property>
             <property name="toolTip">
@@ -169,6 +181,12 @@
              <iconset resource="../icons.qrc">
               <normaloff>:/icons/Icons/icons8-folder-50.png</normaloff>:/icons/Icons/icons8-folder-50.png</iconset>
             </property>
+            <property name="iconSize">
+             <size>
+              <width>18</width>
+              <height>18</height>
+             </size>
+            </property>
             <property name="flat">
              <bool>true</bool>
             </property>
@@ -179,30 +197,24 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
-           <number>2</number>
+           <number>6</number>
+          </property>
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
           </property>
           <item>
-           <widget class="QLabel" name="lb_preview">
-            <property name="minimumSize">
-             <size>
-              <width>64</width>
-              <height>64</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>64</width>
-              <height>64</height>
-             </size>
-            </property>
+           <widget class="QCheckBox" name="checkBox">
             <property name="text">
-             <string/>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
+             <string>Save on flow processed</string>
             </property>
            </widget>
           </item>
