--- a/Nodes/NodeCommonWidget.ui
+++ b/Nodes/NodeCommonWidget.ui
@@ -64,7 +64,7 @@
      <property name="lineWidth">
       <number>1</number>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,0,1,0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,0,1,0,0">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -220,6 +220,13 @@
         </property>
         <property name="text">
          <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
