--- a/Nodes/ImageInputNode.ui
+++ b/Nodes/ImageInputNode.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>152</width>
-    <height>137</height>
+    <width>145</width>
+    <height>65</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,13 +24,13 @@
     <number>2</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="bottomMargin">
     <number>2</number>
@@ -95,8 +95,14 @@
       </property>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,1">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
           </property>
@@ -179,20 +185,20 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
-           <number>2</number>
+           <number>0</number>
           </property>
           <item>
            <widget class="QLabel" name="lb_preview">
             <property name="minimumSize">
              <size>
               <width>64</width>
-              <height>64</height>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>64</width>
-              <height>64</height>
+              <height>0</height>
              </size>
             </property>
             <property name="text">
