--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,6 +13,12 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="animated">
+   <bool>false</bool>
+  </property>
+  <property name="documentMode">
+   <bool>true</bool>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="spacing">
@@ -48,8 +54,9 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionLoadInput"/>
-    <addaction name="actionSave_output"/>
+    <addaction name="actionNewFlow"/>
+    <addaction name="actionSaveFlow"/>
+    <addaction name="actionLoadFlow"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -57,16 +64,31 @@
     </property>
     <addaction name="actionPreferences"/>
    </widget>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>About</string>
+    </property>
+    <addaction name="actionGliltchlabl_0_1"/>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionTime_controls"/>
+    <addaction name="actionTimeline"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
+   <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionLoadInput">
+  <action name="actionLoadFlow">
    <property name="text">
     <string>Load flow</string>
    </property>
   </action>
-  <action name="actionSave_output">
+  <action name="actionSaveFlow">
    <property name="text">
     <string>Save flow</string>
    </property>
@@ -79,6 +101,26 @@
   <action name="actionPreferences">
    <property name="text">
     <string>Preferences</string>
+   </property>
+  </action>
+  <action name="actionNewFlow">
+   <property name="text">
+    <string>New flow</string>
+   </property>
+  </action>
+  <action name="actionGliltchlabl_0_1">
+   <property name="text">
+    <string>Gliltchlabl 0.1</string>
+   </property>
+  </action>
+  <action name="actionTime_controls">
+   <property name="text">
+    <string>Time controls</string>
+   </property>
+  </action>
+  <action name="actionTimeline">
+   <property name="text">
+    <string>Timeline</string>
    </property>
   </action>
  </widget>
