--- a/TimelineWidget.ui
+++ b/TimelineWidget.ui
@@ -6,9 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>675</width>
-    <height>194</height>
+    <width>605</width>
+    <height>171</height>
    </rect>
+  </property>
+  <property name="features">
+   <set>QDockWidget::AllDockWidgetFeatures</set>
   </property>
   <property name="allowedAreas">
    <set>Qt::BottomDockWidgetArea</set>
