--- a/icons.qrc
+++ b/icons.qrc
@@ -27,13 +27,33 @@
         <file>Icons/004-animation.png</file>
         <file>Icons/005-timeline.png</file>
         <file>Icons/006-priority.png</file>
+        <file>Icons/001-return.png</file>
+        <file>Icons/001-tools.png</file>
+        <file>Icons/002-backward-button.png</file>
+        <file>Icons/002-forward-button.png</file>
+        <file>Icons/002-right-arrow - Copie.png</file>
+        <file>Icons/003-clipboard-icon.png</file>
+        <file>Icons/003-fast-forward-arrows.png</file>
+        <file>Icons/004-step-backward.png</file>
+        <file>Icons/004-step-forward.png</file>
+        <file>Icons/005-play-arrow.png</file>
+        <file>Icons/006-addchronometer.png</file>
+        <file>Icons/006-chronometer.png</file>
+        <file>Icons/007-add-new-document.png</file>
+        <file>Icons/007-sort.png</file>
+        <file>Icons/008-link.png</file>
+        <file>Icons/010-txt-file-symbol.png</file>
+        <file>Icons/017-parallel.png</file>
+        <file>Icons/backup.txt</file>
+        <file>Icons/008-pause.png</file>
     </qresource>
     <qresource prefix="/"/>
     <qresource prefix="/shaders">
         <file>Shaders/AllRed.frag</file>
         <file>Shaders/Contrast.frag</file>
-        <file>Shaders/FragmentShader.frag</file>
         <file>Shaders/FullScreenTextureCopy.frag</file>
         <file>Shaders/VertexShader.vert</file>
+        <file>Shaders/Scanner.frag</file>
+        <file>Shaders/Desaturate.frag</file>
     </qresource>
 </RCC>
