--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -114,11 +114,17 @@
    </property>
   </action>
   <action name="actionTime_controls">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Time controls</string>
    </property>
   </action>
   <action name="actionTimeline">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Timeline</string>
    </property>
