--- a/Nodes/ImageInputNode.ui
+++ b/Nodes/ImageInputNode.ui
@@ -46,7 +46,13 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>24</height>
+       <height>26</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>26</height>
       </size>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
