--- a/FlowGraph/ProcessorFlowDockWidget.ui
+++ b/FlowGraph/ProcessorFlowDockWidget.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="floating">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="features">
    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
