--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -74,6 +74,7 @@
     <property name="title">
      <string>View</string>
     </property>
+    <addaction name="actionFlow_widget"/>
     <addaction name="actionTime_controls"/>
     <addaction name="actionTimeline"/>
    </widget>
@@ -127,6 +128,14 @@
    </property>
    <property name="text">
     <string>Timeline</string>
+   </property>
+  </action>
+  <action name="actionFlow_widget">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Flow widget</string>
    </property>
   </action>
  </widget>
