--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>645</width>
-    <height>407</height>
+    <width>877</width>
+    <height>504</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,11 +19,14 @@
   <property name="documentMode">
    <bool>true</bool>
   </property>
+  <property name="dockNestingEnabled">
+   <bool>true</bool>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowNestedDocks|QMainWindow::AllowTabbedDocks|QMainWindow::VerticalTabs</set>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="spacing">
-     <number>2</number>
-    </property>
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0" columnstretch="0">
     <property name="leftMargin">
      <number>2</number>
     </property>
@@ -31,27 +34,11 @@
      <number>2</number>
     </property>
     <property name="rightMargin">
-     <number>2</number>
+     <number>50</number>
     </property>
     <property name="bottomMargin">
-     <number>2</number>
+     <number>50</number>
     </property>
-    <item>
-     <widget class="QWidget" name="glWidget" native="true"/>
-    </item>
-    <item>
-     <widget class="QPlainTextEdit" name="plainTextEdit">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -59,7 +46,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>645</width>
+     <width>877</width>
      <height>21</height>
     </rect>
    </property>
